Implemented top bar with logo, links, and pfp

--- a/exer3/designWebpage/index.html
+++ b/exer3/designWebpage/index.html
@@ -1,7 +1,29 @@
 <!DOCTYPE html>
 <head>
-
+    <title>Google type main website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>First commit!</p>
+    <nav class="top-nav">
+        <div class="nav-left">
+            <img class="pfp" src="public/googleFav.png" alt="Google favicon">
+        </div>
+        <div class="nav-right">
+            <div class="nav-links">
+                <a href="google.com">Link 1</a>
+                <a href="google.com">Link 2</a>
+                <a href="google.com">Link 3</a>
+            </div>
+
+            <img class="pfp" src="public/userIcon.png" alt="User profile picture">
+        </div>
+
+    </nav>
+
+
+    
+
+    <footer class="page-footer">
+        <p class="footer-text">Made by Euan Ham 2025</p>
+    </footer>
 </body>
