--- a/exer3/designWebpage/index.html
+++ b/exer3/designWebpage/index.html
@@ -17,8 +17,12 @@
 
             <img class="pfp" src="public/userIcon.png" alt="User profile picture">
         </div>
-
     </nav>
+
+    <div class="search-bar">
+        <input class="search-input" type="text" placeholder="Search">
+        <button class="search-btn">Enter</button>
+    </div>
 
 
     
