Added second page

--- a/exer3/designWebpage/index.html
+++ b/exer3/designWebpage/index.html
@@ -18,11 +18,12 @@
             <img class="pfp" src="public/userIcon.png" alt="User profile picture">
         </div>
     </nav>
+    <h1 class="google">Google</h1>
 
-    <div class="search-bar">
+    <form class="search-bar" action="results.html" method="get">
         <input class="search-input" type="text" placeholder="Search">
-        <button class="search-btn">Enter</button>
-    </div>
+        <button class="search-btn" type="submit">Enter</button>
+    </form>
 
 
     
