Update info on results page

--- a/exer3/designWebpage/results.html
+++ b/exer3/designWebpage/results.html
@@ -17,7 +17,7 @@
             </section>
             <section class="info-card">
                 <h2>Euan likes to ...</h2>
-                <p></p>
+                <p>Perform! He has experience playing violin for orchestra from both school and All State Orchestras. He did a semester of orchestra at GT but schedule conflicts :/ so he played violin in a band last semester. But now he hopped to another band this semester so he's playing bass now.</p>
             </section>
             <section class="info-card">
                 <h2>Euan likes to ...</h2>
