Finish exercise 4 warm up functions

--- a/exer3/designWebpage/results.html
+++ b/exer3/designWebpage/results.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Who is Zini Chakraborty?</title>
+    <title>Who is Euan Ham?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
